<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/filter_dialog_padding">

    <TextView
            android:id="@+id/tvSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/sort"
            style="@style/FilterDialogTitle"/>

    <RadioGroup
            android:id="@+id/rgSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSort">

            <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/mrbCreated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/created"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/mrbUpdated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/updated"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/mrbPushed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pushed"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/mrbName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"/>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/mbCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rgSort"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>