<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.MainActivity"
        android:padding="@dimen/main_activity_padding">

    <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/tvBioLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivAvatar"
            android:text="@string/bio"
            style="@style/MainTextLabel"/>

    <TextView
            android:id="@+id/tvBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBioLabel"
            style="@style/BioTextLabel"/>

    <TextView
            android:id="@+id/tvLocationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBio"
            android:text="@string/location"
            style="@style/MainTextLabel"/>

    <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBio"
            android:text="@string/location"
            style="@style/MainText"/>

    <TextView
            android:id="@+id/tvEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLocation"
            android:text="@string/email"
            style="@style/MainTextLabel"/>

    <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLocation"
            android:text="@string/email"
            style="@style/MainText"/>

    <TextView
            android:id="@+id/tvCreatedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEmailLabel"
            android:text="@string/created"
            style="@style/MainTextLabel"/>

    <TextView
            android:id="@+id/tvCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEmail"
            android:text="@string/created"
            style="@style/MainText"/>

    <TextView
            android:id="@+id/tvUpdatedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCreatedLabel"
            android:text="@string/updated"
            style="@style/MainTextLabel"/>

    <TextView
            android:id="@+id/tvUpdated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCreated"
            android:text="@string/updated"
            style="@style/MainText"/>

    <TextView
            android:id="@+id/tvPublicReposLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUpdatedLabel"
            android:text="@string/public_repos"
            style="@style/MainTextLabel"/>

    <TextView
            android:id="@+id/tvPublicRepos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUpdated"
            android:text="@string/public_repos"
            style="@style/MainText"/>

    <TextView
            android:id="@+id/tvPrivateReposLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPublicReposLabel"
            android:text="@string/private_repos"
            style="@style/MainTextLabel"/>

    <TextView
            android:id="@+id/tvPrivateRepos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPublicRepos"
            android:text="@string/private_repos"
            style="@style/MainText"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/mbRepos"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_button_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/mbEmail"
            android:text="@string/view_repositories"
            app:icon="@drawable/ic_cloud_download_white_24dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_icon_padding"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/mbEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_button_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/contact_by_email"
            app:icon="@drawable/ic_email_white_24dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_icon_padding"/>

</androidx.constraintlayout.widget.ConstraintLayout>